token-user e package.json com comandos diferentes para windows e mac

--- a/package.json
+++ b/package.json
@@ -10,9 +10,12 @@
     "start": "node src/server.js",
     "test": "jest",
     "lint": "eslint src/** test/** --fix",
-    "knex:migrate:test": "export NODE_ENV=test && knex migrate:latest --env test",
-    "secure-mode": "export NODE_ENV=test && npm run knex:migrate:test && jest --watchAll",
-    "start:test": "export NODE_ENV=test && npm run knex:migrate:test && node src/server.js"
+    "knex:migrate:test:mac": "export NODE_ENV=test && knex migrate:latest --env test",
+    "secure-mode:mac": "export NODE_ENV=test && npm run knex:migrate:test && jest --watchAll",
+    "start:test:mac": "export NODE_ENV=test && npm run knex:migrate:test && node src/server.js",
+    "knex:migrate:test:windows": "set NODE_ENV=test&&knex migrate:latest --env test",
+    "secure-mode:windows": "set NODE_ENV=test&&npm run knex:migrate:test:windows&& jest --watchAll",
+    "start:test:windows": "set NODE_ENV=test&&npm run knex:migrate:test:windows&& node src/server.js"
   },
   "keywords": [],
   "author": "",
